# yew-prototype

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
src/: main.rs
src/components/: app.rs  flash_card.rs  login.rs  mod.rs
src/pages/: mod.rs
