[package]
name = "yew-prototype"
version = "0.2.0"
authors = ["David Wallace Croft <david@croftsoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "Yew Prototype"
edition = "2021"
homepage = "https://www.croftsoft.com/"
# keywords = ["keyword"]
# Remark this line out if your project is not open source
license = "MIT"
# Remark this line out when you publish to crates.io
publish = false
readme = "README.md"
# Remark this line out if your project is not in a code repository
repository = "https://github.com/david-wallace-croft/yew-prototype"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
